resolved issue with location name placeholder text being off-center

--- a/assets/style.css
+++ b/assets/style.css
@@ -50,6 +50,7 @@ textarea:focus, input:focus, button:focus {
 
 .location-input::placeholder {
     color: rgba(255, 255, 255, 0.514);
+    padding-left: 16.6%;
 }
 
 .location-container {
